--- a/.github/workflows/app-deploy.yaml
+++ b/.github/workflows/app-deploy.yaml
@@ -5,8 +5,10 @@ on:
     inputs:
       deploy_commit:
         required: true
+        type: string
       app_name:
         required: true
+        type: string
 
 jobs:
   deploy-to-dev:
