--- a/.github/workflows/app-deploy.yaml
+++ b/.github/workflows/app-deploy.yaml
@@ -22,6 +22,7 @@ jobs:
           argocd login  argocd-main-dev.rdevopsb79.online:443 --grpc-web --username admin --password ${ARGOCD_PASSWORD}
           echo argocd app create ${{ github.event.inputs.app_name }} --upsert --project default --sync-policy auto --repo https://github.com/raghudevopsb79/roboshop-helm --path chart --dest-namespace app --dest-server https://kubernetes.default.svc --values ../env-dev/${{ github.event.inputs.app_name }}.yaml --helm-set image=739561048503.dkr.ecr.us-east-1.amazonaws.com/${{ github.event.inputs.app_name }}:${{ github.event.inputs.deploy_commit }}
           argocd app create ${{ github.event.inputs.app_name }} --upsert --project default --sync-policy auto --repo https://github.com/raghudevopsb79/roboshop-helm --path chart --dest-namespace app --dest-server https://kubernetes.default.svc --values ../env-dev/${{ github.event.inputs.app_name }}.yaml --helm-set image=739561048503.dkr.ecr.us-east-1.amazonaws.com/${{ github.event.inputs.app_name }}:${{ github.event.inputs.deploy_commit }}
+          argocd app sync roboshop-${{ github.event.inputs.app_name }}
 
   deploy-to-qa:
     runs-on: self-hosted
